Create basic library with delete and read opt

--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="newBook">NEW BOOK</button>
-    <div id="books">
-        <div id="heading">
-            <div>Title</div>
-            <div>Author</div>
-            <div>Pages</div>
-            <div>Read?</div>
-        </div>
+    <div id="header">
+        <button id="newBook">NEW BOOK</button>
+        <h1>My Awesome Library</h1>
     </div>
+    <div id="books"></div>
 </body>
 </html>
