It works propperly using localStorage

--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
         <h1>My Awesome Library</h1>
     </div>
     <div id="books"></div>
+    <form class="floating hidden">
+        <label for="titulo">Titulo</label>
+        <input type="text" id="titulo" name ="titulo">
+        <label for="autor">Autor</label>
+        <input type="text" id="autor" name ="autor">
+        <label for="paginas">Nº Páginas</label>
+        <input type="text" id="paginas" name ="paginas">
+        <label for="read">Read?</label>
+        <input type="checkbox" name="read" id="read">
+        <button type="submit" id="enviar">Enviar</button>
+    </form>
 </body>
 </html>
